bdr.BDR2.scala.code
readMessage() match {
  case "R" => right() ; forward()
  case "L" => left() ; forward()
  case "I" => back() ; forward()
  case"A" => forward()
  case"B" => forward(); forward()
  case"C" => forward(); forward(); forward()
  case"D" => 4*forward()
  case "E" => 5* forward()
  case "F" => 6*forward()
  case"Z" => backward()
  case "Y" => backward() ; backward()
  case "X" => backward(); backward(); backward()
  case "W"=> 4*forward()
}